<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.psyjg14.coursework1.viewmodel.MusicListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{viewModel.getBackgroundColourAsInt()}"
        tools:context=".view.MusicListActivity">

        <ListView
            android:id="@+id/musicListView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playbackSpeedLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/musicListView">

            <Button
                android:id="@+id/musicPlayerButtonML"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onMusicPlayerClicked"
                android:text="@string/music_player_button" />

            <Button
                android:id="@+id/musicListButtonML"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:text="@string/music_list_button"
                android:textColor="#000000" />

            <Button
                android:id="@+id/settingsButtonML"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSettingsClicked"
                android:text="@string/settings_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playbackSpeedLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/playbackSpeedTextViewML"
                android:layout_width="161dp"
                android:layout_height="match_parent"
                android:text="@string/playback_speed_label"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/playbackSpeedNumTextViewML"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewModel.playbackSpeed}"
                android:textSize="20dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
