<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.psyjg14.coursework1.viewmodel.MusicPlayerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mpLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{viewModel.getBackgroundColourAsInt()}"
        tools:context=".view.MusicPlayerActivity">

        <LinearLayout
            android:id="@+id/linearVertical"
            android:layout_width="409dp"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearMusicButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.717">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/playbackSpeedTextViewMP"
                    android:layout_width="161dp"
                    android:layout_height="match_parent"
                    android:text="@string/playback_speed_label"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/playbackSpeedNumTextViewMP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@{viewModel.playbackSpeed}"
                    android:textSize="20dp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginBottom="8dp"
                android:progress="@{viewModel.progress}"
                />

            <LinearLayout
                android:id="@+id/linearButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/playButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:onClick="onPlayClicked"
                    android:scaleType="fitCenter"
                    android:src="@drawable/play_icon" />

                <ImageButton
                    android:id="@+id/pauseButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:onClick="onPauseClicked"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pause_icon" />

                <ImageButton
                    android:id="@+id/stopButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:onClick="onStopClicked"
                    android:scaleType="fitCenter"
                    android:src="@drawable/stop_icon" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearMusicButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/musicPlayerButtonMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:text="@string/music_player_button"
                android:textColor="#000000" />

            <Button
                android:id="@+id/musicListButtonMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onMusicListClicked"
                android:text="@string/music_list_button" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
